--- a/src/assets/css/partials/components/_footer.scss
+++ b/src/assets/css/partials/components/_footer.scss
@@ -1,16 +1,16 @@
 footer {
     margin-top: auto;
-    background: var(--clr-bg-sec);
+    background: $clr-bg-sec;
 
 }
 
 
 #footer-copyright {
 
-    padding: var(--space-s) 0;
+    padding: $space-s 0;
 
     p {
-        font-size: var(--type-s);
+        font-size: $type-s;
         font-weight: 500;
     } 
 }
