--- a/src/assets/css/partials/components/_header.scss
+++ b/src/assets/css/partials/components/_header.scss
@@ -12,7 +12,7 @@
   will-change: background-color, border-bottom, backdrop-filter, transform;
 
   width: 100%;
-  height: 64px;
+  height: $space-xxxl;
   position: fixed;
   display: flex;
   justify-content: space-between;
@@ -33,7 +33,7 @@
     ul {
       list-style: none;
       display: flex;
-      gap: var(--space-xl);
+      gap: $space-xl;
       padding: 0;
       margin: 0;
     }
@@ -50,10 +50,8 @@
 }
 
 #main-header.scrolled {
-  background-color: var(--clr-bg-pri);
-  border-bottom: 1px solid var(--clr-border-enabled);
-
-
+  background-color: $clr-bg-pri;
+  border-bottom: 1px solid $clr-border-enabled;
 }
 
 /*------------------------------------------ Hamburger Menu------------------------------------- */
@@ -71,8 +69,8 @@
 
 .hamburger {
   position: fixed;
-  top: var(--space-m);
-  right: var(--space-l);
+  top: $space-m;
+  right: $space-l;
   display: inline-block;
   z-index: 1001;
 
@@ -113,7 +111,7 @@
   width: 100%;
   height: 100vh;
 
-  background-color: var(--clr-bg-pri);
+  background-color: $clr-bg-pri;
   display: none;
   justify-content: start;
   align-items: center;
@@ -125,7 +123,7 @@
   margin-top: 20vh;
   display: flex;
   flex-direction: column;
-  gap: var(--space-m);
+  gap: $space-m;
 
   ul {
     width: 100%;
@@ -133,7 +131,7 @@
     flex-direction: column;
     align-items: start;
     list-style: none;
-    gap: var(--space-xs);
+    gap: $space-xs;
 
     padding: 0;
   }
@@ -155,7 +153,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: var(--space-s) var(--space-xxs) var(--space-s) 0;
+    padding: $space-s $space-xxs $space-s 0;
   }
 
 }
@@ -176,7 +174,7 @@
     nav {
       a {
         &:hover {
-          color: var(--accent-40);
+          color: $accent-40;
         }
       }
     }
