--- a/src/assets/css/partials/_global.scss
+++ b/src/assets/css/partials/_global.scss
@@ -26,6 +26,22 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
 @media (pointer:coarse) {
     *:focus {
         outline: none;
@@ -37,6 +53,8 @@ html {
         transition: none;
     }
 }
+
+
 
 /* -------------------------- General -------------------------- */
 
@@ -64,7 +82,7 @@ section {
 .section-header {
     width: 100%;
     margin: 0 auto;
-    padding: 0 0 $space-s 0;
+    padding: $space-s 0 $space-xxs 0;
 
     border-bottom: 1px solid $clr-border-enabled;
 
